fix scroll chargement et scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -53,8 +53,10 @@
 html {
   height: auto;
   min-height: 100%;
-  overflow-x: hidden;
   overflow-y: auto;
+  overflow-x: hidden;
+  position: static;
+  scrollbar-gutter: stable;
   scroll-behavior: smooth;
   scrollbar-color: var(--blue) var(--background);
   scrollbar-width: thin;
@@ -62,11 +64,11 @@ html {
 
 body {
   height: auto;
-  min-height: 100vh;
-  overflow-x: hidden;
+  min-height: 100%;
   overflow-y: auto;
-  scroll-behavior: smooth;
+  overflow-x: hidden;
   position: static;
+  scroll-behavior: smooth;
   background-color: var(--background);
   color: var(--primary);
   font-family: "Inter", var(--font-inter), sans-serif;
